--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
-# Local Netlify folder
+node_modules/
+dist/
+*.tsbuildinfo
+.DS_Store
+.vercel
 .netlify
+_site/
+.astro/
+scripts/smoke/*-main/
+scripts/memory/project/src/pages/
+benchmark/projects/
+benchmark/results/
+test-results/
+*.log
+package-lock.json
+.turbo/
+.eslintcache
+.pnpm-store
+.netlify
+
+
