--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "marked-shiki": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.86.3",
     "tailwindcss": "^3.4.17",
     "unique-names-generator": "^4.7.1"
   },
